# recall-s3

./: Cargo.toml  Makefile  README.md  ci.Dockerfile
.github/workflows/: lint.yaml  publish.yaml
lib/basin_s3/: Cargo.toml
lib/basin_s3/src/: basin.rs  bucket.rs  encrypted_object.rs  error.rs  lib.rs  main.rs  range.rs  s3.rs  utils.rs
lib/basin_s3/tests/: it_basin.rs
lib/encrypt/: Cargo.toml  root.cert  root.key
lib/encrypt/src/: codec.rs  encryption.rs  key.rs  kms.rs  lib.rs
lib/recall_s3/: Cargo.toml
lib/recall_s3/src/: bucket.rs  error.rs  lib.rs  main.rs  recall.rs  s3.rs  utils.rs
lib/recall_s3/tests/: it_recall.rs
lib/s3s_ipc/: Cargo.toml
lib/s3s_ipc/src/: s3.rs
lib/s3s_ipc/tests/: it_aws.rs
