[workspace]
members = ["lib/recall_s3"]
resolver = "2"

[workspace.package]
authors = ["Textile <contact@textile.io"]
description = "An S3 adapter for Recall Object Storage."
edition = "2021"
homepage = "https://github.com/recallnet/recall-s3/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/recallnet/recall-s3/"
keywords = ["recall", "s3"]
version = "0.1.0"