[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_s3"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
categories = ["database"]
keywords = ["s3", "basin"]

[[bin]]
name = "basin_s3"
required-features = ["binary"]

[features]
default = []
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
anyhow = "1.0.80"
async-tempfile = "0.6.0"
async-trait = "0.1.73"
base64 = "0.22.1"
bytes = "1.4.0"
bytestring = "1.3.1"
clap = { version = "4.3.21", optional = true, features = ["derive", "env"] }
clap-verbosity-flag = "2.2.1"
dare = { git = "ssh://git@github.com/hokunet/dare.git" }
encrypt = { path = "../encrypt" }
ethers = "2.0.14"
fendermint_actor_machine = { git = "ssh://git@github.com/hokunet/ipc.git", rev = "42049075cf7c168d14930d2c895e6bf1d2914515" }
fendermint_actor_objectstore = { git = "ssh://git@github.com/hokunet/ipc.git", rev = "42049075cf7c168d14930d2c895e6bf1d2914515" }
fendermint_crypto = { git = "ssh://git@github.com/hokunet/ipc.git", rev = "42049075cf7c168d14930d2c895e6bf1d2914515" }
fendermint_vm_message = { git = "ssh://git@github.com/hokunet/ipc.git", rev = "42049075cf7c168d14930d2c895e6bf1d2914515" }
futures = "0.3.28"

fvm_shared = "4.1.0"
hex-simd = "0.8.0"
hoku_provider = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev = "b68de019148989c41724efe44cb604e34552a58c" }
hoku_sdk = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev = "b68de019148989c41724efe44cb604e34552a58c" }
hoku_signer = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev = "b68de019148989c41724efe44cb604e34552a58c" }
homedir = "0.3.3"
hyper-util = { version = "0.1.5", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
ipc-api = { git = "ssh://git@github.com/hokunet/ipc.git", rev = "42049075cf7c168d14930d2c895e6bf1d2914515" }
md-5 = "0.10.5"
mime = "0.3.17"
rand = { version = "0.8", features = ["getrandom"] }
s3s = "0.10.0"
tempfile = "3.10.1"
tendermint-rpc = { version = "0.31.1", features = [
    "secp256k1",
    "http-client",
    "websocket-client",
] }
time = "0.3.25"
tokio = { version = "1.31.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", optional = true, features = ["env-filter", "time"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
anyhow = { version = "1.0.73", features = ["backtrace"] }
aws-config = { version = "1.1.2", default-features = false }
aws-credential-types = { version = "1.1.2", features = ["test-util"] }
aws-sdk-s3 = { version = "1.12.0", features = ["behavior-version-latest"] }
dare = { git = "ssh://git@github.com/hokunet/dare.git" }
once_cell = "1.18.0"
s3s-aws = "0.10.0"
tokio = { version = "1.31.0", features = ["full"] }
tokio-stream = "0.1.16"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
