[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_s3"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
categories = ["database"]
keywords = ["s3", "basin"]

[[bin]]
name = "basin_s3"
required-features = ["binary"]

[features]
default = []
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.83"
bytes = "1.8.0"
clap = { version = "4.5.20", optional = true, features = ["derive", "env"] }
futures = "0.3.31"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.10", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
md-5 = "0.10.6"
mime = "0.3.17"
s3s = "0.10.1"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", optional = true, features = [
    "env-filter",
    "time",
] }
uuid = { version = "1.11.0", features = ["v4"] }
anyhow = "1.0.91"
bytestring = "1.3.1"
async-tempfile = "0.6.0"
tempfile = "3.13.0"
homedir = "0.3.4"
clap-verbosity-flag = "2.2.2"
ethers = "2.0.14"
hoku_sdk = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev ="8a8653c0e5a780e93764b01dccbcad2a4f783580"}
hoku_provider = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev ="8a8653c0e5a780e93764b01dccbcad2a4f783580"}
hoku_signer = { git = "ssh://git@github.com/hokunet/rust-hoku.git", rev ="8a8653c0e5a780e93764b01dccbcad2a4f783580"}
prometheus = { version = "0.13", features = ["process"] }
prometheus_exporter = "0.8"
lazy_static = "1.5"

# Vendored for cross-compilation, see https://github.com/cross-rs/cross/wiki/Recipes#openssl
# Make sure every top level build target actually imports this dependency, and don't end up
# depending on the same _without_ the "vendored" feature, because then the Docker build for
# for ARM64 on AMD64 will fail, it won't find the OpenSSL installation.
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
aws-config = { version = "1.5.9", default-features = false }
aws-credential-types = { version = "1.2.1", features = ["test-util"] }
aws-sdk-s3 = { version = "1.58.0", features = ["behavior-version-latest"] }
once_cell = "1.20.2"
s3s-aws = "0.10.1"
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
